# Kotoba

./: .gitignore  .gitmodules  LICENSE  README.md  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
.github/workflows/: ci.yml  release.yml
apps/desktop/: .env.example  drizzle.config.ts  eslint.config.mjs  forge.config.ts  index.html  notes-widget.html  onboarding.html  package.json  tsconfig.json  vite.main.config.mts  vite.notes-widget.config.mts  vite.renderer.config.mts
apps/desktop-tauri/: .gitignore  README.md  index.html  onboarding.html  package.json  tailwind.config.js  vite.config.ts  widget.html
apps/desktop-tauri/src/: main.tsx  onboarding.tsx  widget.tsx
apps/desktop-tauri/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop-tauri/src-tauri/capabilities/: default.json
apps/desktop-tauri/src-tauri/src/: db.rs  lib.rs  main.rs  state.rs
apps/desktop-tauri/src-tauri/src/commands/: app.rs  mod.rs  models.rs  onboarding.rs  recording.rs  settings.rs  transcriptions.rs  widget.rs
apps/desktop-tauri/src/api/: app.ts  index.ts  models.ts  recording.ts  settings.ts  transcriptions.ts
apps/desktop-tauri/src/styles/: globals.css
apps/desktop/src/components/: dev-theme-toggle.tsx  feedback-button.tsx  nav-secondary.tsx  shortcut-input.tsx  site-header.tsx  update-dialog.tsx
apps/desktop/src/data/: hallucination-phrases.ts
apps/desktop/src/db/: app-settings.ts  index.ts  models.ts  schema.ts  transcriptions.ts  (+1 more)
apps/desktop/tests/: README.md  setup.ts
apps/desktop/types/: eslint.config.mjs  tsconfig.json
(+165 files in other folders)
